stage-2/src/Components/ShoppingCart/ShoppingCart.css
.shopping-cart-container {
  position: relative;
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  background-color: white;
}

.shopping-cart-product-container {
  display: flex;
  margin: 5vh 0;
  font-family: 'Source Code Pro', monospace;
}

img {
  height: 400px;
  width: auto;
}

.shopping-cart-info {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 5vh;
}

.shopping-cart-container h1 {
  font-size: 30px;
  margin: 3vh 0;
}

.shopping-cart-container h2 {
  font-size: 30px;
  margin: 3vh 0;
}

.shopping-cart-button-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.shopping-cart-button {
  height: 50px;
}

.go-buy-something {
  display: flex;
  align-items: center;
  height: calc(100vh - 102px);
}

